--- a/style.css
+++ b/style.css
@@ -59,16 +59,20 @@ body {
     color: #fff;
 }
 
-/* Брейкпоінт  Планшети */
+/* Брейкпоінт Планшети */
+
 @media (max-width: 992px) {
-    .navbar {
+    .navbar,
+    .main-footer {
         padding-left: 20px;
         padding-right: 20px;
     }
 }
 
-/* Брейкпоінт  Телефони */
+
+/* Брейкпоінт Телефони */
 @media (max-width: 576px) {
+    /* Хедера */
     .navbar-brand {
         font-size: 1.2rem;
     }
@@ -78,5 +82,18 @@ body {
     .navbar .d-flex .btn {
         padding: 5px 10px;
         font-size: 0.9rem;
+    }
+
+    /* Футер */
+    .main-footer {
+        flex-direction: column; 
+        gap: 1rem; 
+        text-align: center; 
+    }
+
+    .main-footer .footer-nav {
+        /* Центруємо навігаційні посилання */
+        justify-content: center; 
+        width: 100%;
     }
 }
